setting up repo

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/cosmo/bootstrap.min.css">
     <link rel="stylesheet" href="assets/bustle-clone.css">
 
     {{content-for 'head-footer'}}
