--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,11 @@
     <title>BustleClone</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src='https://code.jquery.com/jquery-1.11.3.min.js' charset="utf-8"></script>
 
     {{content-for 'head'}}
-
     <link rel="stylesheet" href="assets/vendor.css">
-    
     <link rel="stylesheet" href="assets/bustle-clone.css">
 
     {{content-for 'head-footer'}}
